          LLVM/Apple clang with libc++, as libc++ does not yet support
          std::thread_local)
        - uses OpenMP only if the compiler is detected as GNU gcc

Version 0.8.2 - 20 May 2015
    - Added <traits.h> type traits header file with the following type traits:
        qpp::is_iterable<> - checks for iterable STL-like containers
        qpp::is_matrix_expression<> - checks for Eigen::MatrixBase<> expressions
        qpp::is_complex<>  - checks whether the type is std::complex<>
    - Added <statistics.h> header file containing the following new functions:
        qpp::uniform()     - uniform probability distribution vector
        qpp::marginalX()   - marginal distribution
        qpp::marginalY()   - marginal distribution
        qpp::avg()         - average
        qpp::sigma()       - standard deviation
        qpp::cov()         - covariance
        qpp::cor()         - correlation
        qpp::var()         - variance
    - Added new examples in ./examples

Version 0.8.4 - 14 October 2015
    - Added <macros.h> preprocessor debug macros header, containing:
        PRINT(x)   - std::cout << (x)
        PRINTLN(x) - std::cout << (x) << std::endl
        ERROR(x)   - std::cerr << (x)
        ERRORLN(x) - std::cerr << (x) << std::endl
    - Added new functions in <operations.h>:
        qpp::ip()  - Generalized inner product
    - Modified qpp::measure() so that the output consists of pure states
        whenever the input is a pure state and the measurement operators are
        rank-one POVMs (technically rank-one Kraus operators). Includes basis
        measurements as a particular case.
    - Improved qpp::Timer<>, now both the duration and the clock's type can be
        specified as template parameters, defaulted to
        std::chrono::duration<double> and std::chrono::steady_clock,
        respectively

Version 0.8.5 - development
    - Work in progress at qpp::experimental::MatrixView class