@@ -22,7 +22,7 @@ cmat gettmp()
 int main()
 {
     // testing qpp::experimental::MatrixView
-    idx ROWS = 4, COLS = 4;
+/*    idx ROWS = 4, COLS = 4;
     cmat A = gt.CNOT;
     //A << 1, 2., 3., 4.;
 
@@ -65,4 +65,47 @@ int main()
     cmat B = syspermute(rho, perm);
     cmat C = experimental::make_MatrixView(rho, perm).get_copy();
     std::cout << "Norm difference: " << norm(B - C) << std::endl;
+    */
+
+    std::vector<idx> dims{2, 2, 2}; // 3 qubits
+    idx n = dims.size();            // total number of qudits
+    idx D = prod(dims);             // total dimension
+
+    std::vector<idx> ctrl{0, 2};    // where we apply the control
+    std::vector<idx> target{1};     // target
+
+    idx Dtarget = 1;                // dimension of the target subsystems
+    for(idx i = 0; i < target.size(); ++i)
+        Dtarget *= dims[target[i]]; // compute it here
+
+    // some random n qudit pure state
+    qpp::ket psi = randket(D);
+
+    qpp::cmat rho = psi * qpp::adjoint(psi); // the corresponding density matrix
+    qpp::cmat U = randU(Dtarget); // some random unitary on the target
+
+    // applyCTRL on pure state
+    ket A = qpp::applyCTRL(psi, U, ctrl, target, dims);
+
+    // applyCTRL on density matrix
+    qpp::cmat B = qpp::applyCTRL(rho, U, ctrl, target, dims);
+
+    // result when using CTRL-U|psi><psi|CTRL-U^\dagger
+    qpp::cmat result_psi = A * adjoint(A);
+    // result when using CTRL-U(rho)CTRL-U^\dagger
+    qpp::cmat result_rho = B;
+
+    std::cout << norm(result_psi - result_rho) << std::endl;
+
+    std::cout << "|psi><psi| = RHO =" << std::endl;
+    std::cout << disp(rho) << std::endl << std::endl;
+
+    std::cout << "U|psi><psi|U^\\dagger" << std::endl;
+    std::cout << disp(result_psi) << std::endl << std::endl;
+
+    std::cout << "U rho U^\\dagger" << std::endl;
+    std::cout << disp(result_rho) << std::endl << std::endl;
+
+    std::cout << "Norm difference (better be zero): ";
+    std::cout << norm(result_psi - result_rho) << std::endl;
 }
